# Teleoperation

./: .gitignore  LICENSE  README.md  Slave.py  herramienta.py  master.py
imu_xarm_controller/: main.tex  package.xml  robot_master_slave_tracking_trial1.xlsx  robot_master_slave_tracking_trial2.xlsx  robot_master_slave_tracking_trial3.xlsx  setup.cfg  setup.py
imu_xarm_controller/config/: master_slave_drag.yaml
imu_xarm_controller/imu_xarm_controller/: DataSaver.py  ESPSerial.c  PlotData.py  master_slave_node.py  proof.py  serial_publisher.py  serial_subscriber.py
imu_xarm_controller/launch/: master_slave.launch.py
imu_xarm_controller/uploads/: robot_master_slave_tracking_trial1.csv  robot_master_slave_tracking_trial2.csv  robot_master_slave_tracking_trial3.csv
