<?xml version="1.0"?>
<package format="3">
  <name>imu_xarm_controller</name>
  <version>0.0.1</version>
  <description>xArm Lite 6 Master-Slave controller</description>
  <maintainer email="you@email.com">you</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>xarm_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
